app/assets/stylesheets/search_appliance_overrides.css.scss
@import "hesburgh_assets/main/1.0/mixins.css.scss";

#tab_box select.search_field {
  width: 100px;
}

.search-appliance {
  max-width: 660px;
  margin-left: auto;
  margin-right: auto;

  .pull-left .btn,
  .pull-left + .pull-left {
    margin-left: 4px;
  }

  input.srch-box.long {
    width: 400px;
  }
}

@media only screen and (max-width: 767px) {
  .search-appliance {
    @include search-appliance-tabs-small;

    ul.contained.tabs-content > li input.srch-box.long {
      width: 206px;
      margin-right: 0;
    }

    .pull-left .btn,
    .pull-left + .pull-left {
      margin-left: 0;
    }
  }
}

